# SMSD

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  HOWTO-INSTALL.md  LICENSE  LICENSE-HEADER-JAVA.txt  NOTICE  README  README.md  SMSD  SMSD.bat  WHITEPAPER.md  build-smsd.xml  build.properties  build.xml  launch.html  migrate2CDK1.5.13.sh  nbbuild.xml  pom.fat.xml  pom.xml  preview-application_backup.html  pyproject.toml  release.properties
.github/workflows/: codeql  codeql.yml  docker-image.yml  installers.yml  maven.yml  python-publish.yml  release.yml
Data/: 5.1.1.11_R00686_C00001.mol  5.1.1.11_R00686_C00001.smiles  5.1.99.2_R03228_C01090.mol  5.2.1.10_R04576_C04729.mol  5.5.1.13_R02068_C00353.mol  5.99.1.1_R04010_C02660.mol  5.99.1.1_R04010_C02660.smiles  ADP.mol  ATP.mol  RingMolStereo.mol  mol4NMCS.sdf  mol4NMCS2.sdf  mol4NMCS2.smiles  query.smi  target.smi
benchmarks/: BENCHMARK_REPORT.md  README.md  benchmark_1000.py  benchmark_1000_java.java  benchmark_all.py  benchmark_cpp.cpp  benchmark_cpp.sh  benchmark_java.sh  benchmark_leaderboard.py  benchmark_present_vs_light_scaling.py  benchmark_python.py  benchmark_python_vs_rdkit.py  benchmark_random200_reaction_backends.py  benchmark_rdkit.py  benchmark_smsd_v6.py  benchmark_substructure_java.java  benchmark_tautomer.cpp  benchmark_tautomer_zinc.java  compare_benchmark_tsv.py  diverse_molecules.txt  generate_dalke_pairs.py  results_dalke_nn_1000pairs.txt  results_dalke_random_1000pairs.txt  results_ehrlich_rarey_1400smarts.txt  results_external_all_combined.txt  results_leaderboard_core_java_sub.tsv  results_leaderboard_core_mcs.tsv  results_leaderboard_core_python.tsv  results_leaderboard_core_summary.txt  results_leaderboard_mcs.tsv  results_leaderboard_substructure.tsv  results_leaderboard_summary.txt  results_present_vs_light_scaling_mcs.tsv  results_present_vs_light_scaling_sub.tsv  results_present_vs_light_scaling_summary.txt  results_present_vs_light_scaling_tables.md  results_python.tsv  results_python_6_9_1.tsv  results_random200_reaction_backend_compare_pure.json  results_random200_reaction_backend_compare_pure.md  (+12 more)
benchmarks/data/: README.md  chembl_mcs_benchmark.smi  chodera_tautobase_subset.txt  dalke_nn_pairs.tsv  dalke_random_pairs.tsv  ehrlich_rarey_smarts.txt  stress_pairs.tsv  tautobase_smirks.txt
core/: pom.xml
cpp/: CMakeLists.txt  build.sh  build_gpu.sh
cpp/bindings/pybind11/: smsd_bindings.cpp
cpp/cuda/: batch_screen.cu  graph_kernels.cu
cpp/include/fp/: common.hpp  format.hpp  similarity.hpp
cpp/include/fp/mol/: circular.hpp  mcs_fp.hpp  path.hpp  pharmacophore.hpp  torsion.hpp
cpp/include/smsd/: batch.hpp  bitops.hpp  bond_energies.hpp  cip.hpp  clique_solver.hpp  color_palette.hpp  depict.hpp  depictor.hpp  gpu.hpp  gpu_kernels.hpp  hungarian.hpp  layout.hpp  mcs.hpp  metal_gpu.hpp  mol_graph.hpp  mol_reader.hpp  periodic_table.hpp  rascal.hpp  ring_finder.hpp  scaffold_library.hpp  smarts_parser.hpp  smiles_parser.hpp  smsd.hpp  vf2pp.hpp
cpp/metal/: metal_batch.mm  metal_graph_kernels.mm
cpp/src/: rdkit_adapter.cpp
cpp/tests/: test_batch_gpu.cpp  test_cip.cpp  test_core.cpp  test_layout.cpp  test_parsers.cpp  test_smiles_comprehensive.cpp
docs/: CPP.md  DESIGN-reaction-aware-mcs-postfilter.md  EXAMPLES.md  HOWTO-INSTALL.md  JAVA.md  OPTIMIZATION_ROADMAP.md  PYTHON.md  RELEASE_NOTES.md  RELEASE_NOTES_6.10.0.md  RELEASE_NOTES_6.10.1.md  RELEASE_NOTES_6.10.2.md  RELEASE_NOTES_6.11.0.md  RELEASE_NOTES_6.11.2.md  RELEASE_NOTES_6.12.0.md  RELEASE_NOTES_6.12.1.md  RELEASE_NOTES_6.12.2.md  RELEASE_NOTES_6.9.0.md  RELEASE_NOTES_6.9.1.md  WHITEPAPER.md  manual.doc  manual.html  manual.pages  manual.txt
docs/apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  javadoc.sh  options  overview-frame.html  overview-summary.html  overview-tree.html  package-list  packages  serialized-form.html
exec/: nbactions.xml  pom.xml
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
javadoc/cmd/: ArgumentHandler.html  ImageGenerator.html  InputHandler.MatchType.html  InputHandler.html  OutputHandler.html  SMARTSQueryTool.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
javadoc/gui/: ImageGenerator.html  MCS.html  SubGraphMapper.html  SubstructureBenchMark.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
javadoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
legacy/: LICENSE  README.md  release.properties
legacy/core/: pom.xml
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
python/: README.md  pyproject.toml
python/smsd/: __init__.py  mcs_engine.py
python/tests/: __init__.py  test_api_consistency.py  test_api_coverage.py  test_aromaticity_parity.py  test_chemistry_torture.py  test_cip.py  test_external_benchmarks.py  test_fingerprints.py  test_hydrogen_handling.py  test_layout.py  test_reaction_aware.py  test_smsd.py
smsd/: pom.xml
smsd-core/: pom.xml
src/cmd/: ArgumentHandler.java  AtomContainerComparator.java  ImageGenerator.java  InputHandler.java  OutputHandler.java  SMARTSQueryTool.java  SMSDcmd.java
src/gui/: ImageGenerator.java  MCS.java  Mcs.java  SMSDFrame.java  SubGraphMapper.java  SubstructureBenchMark.java  TestSMSD.java
src/scripts/: smsd  smsd.bat  smsd.ps1
src/smsdcmd/: ArgumentHandler.java  ImageGenerator.java  InputHandler.java  OutputHandler.java  SMSDcmd.java
templates/: header-java.txt
test/example/: MCSSearch.java  RingTest.java  SubstructureSearch.java  Test.java
(+1281 files in other folders)
